[package]
name = "eth-hand-shaker-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
clap = { version = "4.0.29", features = ["derive"]}
displaydoc = "0.2.3"
ethereum-rlp = "0.2.3"
hex = "0.4.3"
thiserror = "1.0.34"
tokio = { version = "1.23.0" , features = ["full"]}
url = "2.3.1"
secp256k1 = { version = "0.25.0" , features = ["bitcoin-hashes-std", "serde", "rand-std", "recovery"]}
concat-kdf = "0.1.0"
sha2 = "0.10.6"
aes = "0.8.2"
ctr = "0.9.2"
sha3 = "0.10.6"
cipher = {version ="0.4.3" , features = ["block-padding"] }
